--- a/src/components/hotels/HotelItem.module.css
+++ b/src/components/hotels/HotelItem.module.css
@@ -1,32 +1,42 @@
 .item {
+  width: 80%;
   margin: 1rem 0;
-  padding: 1rem ;
+  
   display: flex;
-  justify-content: space-between;
+  
   align-items: flex-end;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   border-radius: 6px;
   background-color: #ffffff;
+  /* border: 1px rgb(102, 255, 0) solid; */
+}
+
+.item:hover {
+  background-color: #F6F9FD;
 }
 
 .cover {
   margin: 0;
+  padding: 1rem ;
   font-size: 1rem;
   box-sizing: border-box;
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  
+  /* border: 1px rgb(19, 13, 13) solid; */
 }
 
 .infoBox {
   width: 60%;
-  margin:0 1rem;
+  margin: 0 1rem;
+  /* border: 1px red solid; */
 }
 
 .hotelName{
   font-size: 1.2rem;
   font-weight: normal;
   margin-bottom: 0;
+  /* border: 1px red solid; */
 }
 
 .score {
@@ -38,6 +48,7 @@
   color: #0EC5BC;
   margin: .3rem 0 2rem 0;
   padding-left: .5rem;
+  /* border: 1px red solid; */
 }
 
 .cover img {
@@ -45,9 +56,10 @@
   height: 10rem;
   min-width: 8rem;
   border-radius: 6px;
+  /* border: 1px red solid; */
 }
 
-@media screen and (max-width: 760px)  {
+/* @media screen and (max-width: 760px)  {
   .cover img {
     width: 25%;
     height: 8rem;
@@ -56,4 +68,4 @@
   .cover {
     font-size: 8px;
   }
-}
+} */
