--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,14 @@ body {
   color: white;
 }
 
+.btn {
+  cursor: pointer;
+  border-radius: 4px;
+  border: .7px solid #0F70FD;
+  color: #0F70FD;
+  padding: .5rem .7rem;
+  margin: .3rem;
+  background-color: #ffffff;
+  text-decoration: none;
+}
+
