--- a/src/components/hotels/HotelsList.module.css
+++ b/src/components/hotels/HotelsList.module.css
@@ -5,13 +5,25 @@
 
 .sorting {
   padding-bottom: 1rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
+}
+
+.addButton {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.addButton p {
+  font-weight: bold;
+  margin: 0;
 }
 
 .sorting button {
   font: inherit;
-  color: teal;
-  border: 1px solid teal;
+  color: #0f70fd;
+  border: 1px solid #0f70fd;
   background-color: transparent;
   border-radius: 4px;
   padding: 0.5rem 1.5rem;
@@ -19,5 +31,5 @@
 }
 
 .sorting button:hover {
-  background-color: #c2fafa;
+  background-color: #f6f9fd;
 }
