--- a/src/components/pagination/Pagination.module.css
+++ b/src/components/pagination/Pagination.module.css
@@ -1,15 +1,31 @@
-.pagination{
-display: flex;
+.paginationDiv {
+  display: flex;
+  justify-content: center;
 }
 
-.pageLink{
-color: black;
-text-decoration: none;
-margin-left: .8rem;
+.pagination {
+  display: flex;
+  margin: 0;
+  padding: 0;
 }
-.pageLink:hover{
-    cursor: pointer;
+
+.pageLink {
+  color: #0000005d;
+  text-decoration: none;
+  margin: 0.5rem;
 }
-ul{
-    list-style-type: none;
+.pageLink:hover,
+.pageLink:focus {
+  cursor: pointer;
+  font-weight: bold;
+  color: #000000d7;
+}
+ul {
+  list-style-type: none;
+}
+
+button {
+  border: none;
+  padding: 0;
+  background-color: white;
 }
