--- a/src/components/UI/LoadingSpinner.module.css
+++ b/src/components/UI/LoadingSpinner.module.css
@@ -4,14 +4,14 @@
   height: 80px;
 }
 .spinner:after {
-  content: ' ';
+  content: " ";
   display: block;
   width: 64px;
   height: 64px;
   margin: 8px;
   border-radius: 50%;
-  border: 6px solid #0F70FD;
-  border-color: #0F70FD transparent #0F70FD transparent;
+  border: 6px solid #0f70fd;
+  border-color: #0f70fd transparent #0f70fd transparent;
   animation: spinner 1.2s linear infinite;
 }
 @keyframes spinner {
