--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -1,15 +1,15 @@
 .header {
   width: 100%;
   height: 5rem;
-  position:fixed;
+  position: fixed;
   z-index: 1;
-  top:0;
+  top: 0;
   display: flex;
   padding: 0 10%;
   justify-content: space-between;
   align-items: center;
   background-color: #ffffff;
-  border-bottom: #00000054 solid .5px;
+  border-bottom: #00000054 solid 0.5px;
 }
 
 .logo {
@@ -48,13 +48,13 @@
   color: #ff0000;
 }
 
-@media screen and (max-width: 760px)  {
+@media screen and (max-width: 760px) {
   .logo {
     font-size: 1.5rem;
   }
 
   .nav li {
     margin-left: 1rem;
-    font-size: .5rem;
+    font-size: 0.5rem;
   }
 }
