--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap");
 
 * {
   box-sizing: border-box;
 }
 
 html {
-  font-family: 'Noto Sans JP', sans-serif;
+  font-family: "Noto Sans JP", sans-serif;
 }
 
 body {
@@ -30,11 +30,46 @@ body {
 .btn {
   cursor: pointer;
   border-radius: 4px;
-  border: .7px solid #0F70FD;
-  color: #0F70FD;
-  padding: .5rem .7rem;
-  margin: .3rem;
+  border: 0.7px solid #0f70fd;
+  color: #0f70fd;
+  padding: 0.5rem 0.7rem;
+  margin: 0.3rem;
   background-color: #ffffff;
   text-decoration: none;
 }
 
+.btn:hover {
+  background-color: #f6f9fd;
+}
+
+.addBtn {
+  cursor: pointer;
+  font-size: 1.5rem;
+  text-decoration: none;
+  border: 0.7px solid #0f70fd;
+  color: #0f70fd;
+  padding: 0 0.7rem;
+  margin: 0;
+  border-radius: 4px;
+}
+
+.addBtn:hover {
+  background-color: #f6f9fd;
+}
+
+.arrow {
+  border: solid rgba(0, 0, 0, 0.596);
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+}
+
+.right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
+.left {
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+}
